tentando inserir video

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 quarkus.datasource.db-kind = mysql
+quarkus.http.body.handle-file-uploads=true
 quarkus.datasource.username = user
 quarkus.datasource.password = password
 quarkus.datasource.jdbc.url = jdbc:mysql://localhost:3306/dronedb
