criado Videos Entity controler service e upload / listagem dos videos

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,4 @@ quarkus.datasource.password = password
 quarkus.datasource.jdbc.url = jdbc:mysql://localhost:3306/dronedb
 
 quarkus.hibernate-orm.database.generation = drop-and-create
+quarkus.http.body.uploads-directory=/home/ubuntu/git/Desafio-final/futureh/src/main/resources/uploads/
