--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,12 @@
       <artifactId>rest-assured</artifactId>
       <scope>test</scope>
     </dependency>
+    <dependency>
+		<groupId>io.rest-assured</groupId>
+		<artifactId>json-schema-validator</artifactId>
+		<version>5.3.1</version>
+		<scope>test</scope>
+	</dependency>
   </dependencies>
   <build>
     <plugins>
